<resources>
    <string name="app_name">TeachersAssistant</string>
    <string name="visible_app_name">Teacher\'s Assistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="schedule">Schedule</string>
    <string name="reset">Reset all data</string>
    <string name="logout">Log out</string>
    <string name="sunday_shortcut">Sun</string>
    <string name="monday_shortcut">Mon</string>
    <string name="tuesday_shortcut">Tue</string>
    <string name="wednesday_shortcut">Wed</string>
    <string name="thursday_shortcut">Thu</string>
    <string name="friday_shortcut">Fri</string>
    <string name="saturday_shortcut">Sat</string>
    <string name="menu">Menu</string>
    <string name="subject_name">Subject name</string>
    <string name="add_new_subject">Add new subject</string>
    <string name="assigned_students">Assigned students</string>
    <string name="subject_dates">Subject dates</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="go_to_schedule">Go to schedule</string>
    <string name="assign_students">Assign students</string>
    <string name="assign">Assign</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="album_number">Album number</string>
    <string name="grades">Grades</string>
    <string name="new_grade">New grade</string>
    <string name="title">Title</string>
    <string name="grade">Grade</string>
    <string name="comment">Comment</string>
    <string name="add_new_student">Add new student</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="my_students">My students</string>
    <string name="my_subjects">My subjects</string>
    <string name="go_to_all_subjects">Go to all subjects</string>
    <string name="day">Day</string>
    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>
    <string name="remove">Remove</string>
    <string-array name="day_options">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>