<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ScheduleFragment"
    android:background="@color/my_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/go_to_menu_from_schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/my_very_light_blue"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <LinearLayout
            android:id="@+id/buttons_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/monday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/monday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:id="@+id/tuesday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/tuesday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:id="@+id/wednesday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/wednesday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:id="@+id/thursday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/thursday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:id="@+id/friday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/friday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:id="@+id/saturday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_red"
                android:text="@string/saturday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

            <Button
                android:id="@+id/sunday_button"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/my_red"
                android:text="@string/sunday_shortcut"
                android:textColor="@color/my_very_light_blue"
                android:textSize="20sp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>