<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainMenuViewModel"
            type="com.example.teachersassistant.viewmodels.common.MainMenuViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.common.MainMenuFragment"
        android:background="@color/my_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/visible_app_name"
                android:textColor="@color/my_very_light_blue"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:text='@{"Welcome: " + mainMenuViewModel.currentUserUsername}'
                android:textColor="@color/my_very_light_blue"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/my_very_light_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_text_view" />

            <LinearLayout
                android:id="@+id/buttons_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <Button
                    android:id="@+id/schedule_button"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="@color/my_blue"
                    android:text="@string/schedule"
                    android:textColor="@color/my_very_light_blue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <Button
                    android:id="@+id/my_subjects_button"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="@color/my_blue"
                    android:text="@string/my_subjects"
                    android:textColor="@color/my_very_light_blue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <Button
                    android:id="@+id/my_students_button"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="@color/my_blue"
                    android:text="@string/my_students"
                    android:textColor="@color/my_very_light_blue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="@color/my_red"
                    android:text="@string/reset"
                    android:textColor="@color/my_very_light_blue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="@color/my_blue"
                    android:text="@string/logout"
                    android:textColor="@color/my_very_light_blue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ButtonStyle,InefficientWeight" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>