<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="allStudentsViewModel"
            type="com.example.teachersassistant.viewmodels.AllStudentsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.AllStudentsFragment"
        android:background="@color/my_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/go_to_main_menu_from_all_students_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textColor="@color/my_very_light_blue"
                android:textSize="15sp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <TextView
                android:id="@+id/my_students_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/my_students"
                android:textColor="@color/my_very_light_blue"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/all_students_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="@color/my_very_light_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_students_text_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_students_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                android:layout_marginBottom="20dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/add_new_student_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.95" />


            <Button
                android:id="@+id/add_new_student_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/my_blue"
                android:text="@string/add_new_student"
                android:textColor="@color/my_very_light_blue"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,InefficientWeight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>